--- a/odczyt/style.css
+++ b/odczyt/style.css
@@ -14,9 +14,16 @@ form {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+form b {
+    color: #f00;
+    margin: 0 0 10px;
+    display: block;
+}
+
 input[type="text"],
 input[type="number"],
 input[type="email"],
+input[type="password"],
 textarea,
 select {
     width: 100%;
@@ -35,7 +42,7 @@ textarea {
 button {
     width: 100%;
     padding: 10px;
-    background-color: #007BFF;
+    background-color: #007bff;
     color: #fff;
     border: none;
     border-radius: 4px;
