--- a/odczyt/style.css
+++ b/odczyt/style.css
@@ -100,3 +100,21 @@ h1 {
     color: #333;
     margin: 30px 0;
 }
+
+form ul {
+    color: #dc3545;
+    background-color: #f8d7da;
+    border: 1px solid #f5c6cb;
+    border-radius: 4px;
+    padding: 15px 15px 15px 35px;
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+
+form ul li {
+    margin-bottom: 5px;
+}
+
+form ul li:last-child {
+    margin-bottom: 0;
+}
